# mxphys

./: CMakeLists.txt  LICENSE.md  README.md
.github/workflows/: build-ubuntu.yml  build-windows.yml
demo/: CMakeLists.txt  demo.cpp  demo_ropes.cpp
include/mxphys/: body.h  bv_heirarchy.h  collision.h  forces.h  polygon.h  rope.h  types.h
include/mxphys/event/: collision_event.h  event_data.h  event_types.h  eventmanager.h
src/: CMakeLists.txt  body.cpp  eventmanager.cpp  forces.cpp  polygon.cpp
test/: CMakeLists.txt  collision_conservation.cpp
